styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');

:root {
    --main-accent-color: #29F9FF;
    --secondary-accent-color: #FF0051;
    --background-color: #FFFF;
    --transparent-background-color: rgba(255, 255, 255, 1);
    --text-color:#000;
    --menu-border-color: #000;

    --hero-title-font-size: clamp(1.7rem, 0.7153rem + 1.6368vw, 2.2rem);
    --default-body-font-size: clamp(1.1rem, 0.7153rem + 1.6368vw, 1.5rem);
    --pseudo-class-font-size: 0.8rem;
    --main-tech-list-font-size: clamp(1.4rem, 0.7153rem + 1.6368vw, 1.8rem);
    --more-tech-list-font-size: clamp(0.7rem, 0.7153rem + 1.6368vw, 1rem);
    --tech-used-in-projects-font-size: 0.9rem;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Roboto Slab', serif;
}

/* This applies from 0px to 600px screen sizes */

html {
    height: 85vw;

}

body {
    /* background:burlywood; */
    overflow-x: hidden;
    min-height: 100vh;
    max-width: 100%;
    padding-left: 2em;
    padding-right: 2em;
    font-size: var(--default-body-font-size);
    display: flex;
    flex-direction: column;
}

em {
    font-style: normal;
    text-decoration: underline;
    text-decoration-color: var(--main-accent-color);
    text-decoration-thickness: 0.4ex;
    text-underline-offset: -0.5ex;
    text-decoration-skip-ink: none;
}

ul, li {
    list-style: none;
}
.whitespace{
    color: var(--transparent-background-color);
}
/* Back to Top button */
#topBtn {
    display: none;
    position: fixed;
    bottom: 40px;
    right: 30px;
    z-index: 99;
    outline: none;
    border: var(--transparent-background-color);
    border-radius: 50%;
    width: 42px;
    height: 42px;
    text-transform: uppercase;
    background-color: var(--transparent-background-color);
    cursor: pointer;
    font-size: var(--more-tech-list-font-size);
}
#topBtn:hover {
    cursor: pointer;
    background-color: var(--transparent-background-color);
    color:var(--secondary-accent-color);
}
/* Navbar */
nav {
    padding-top: 0.25rem;
    padding-bottom: 5px;
    position: fixed;
    z-index: 99;
    background-color: var(--transparent-background-color);
    width: 100%;
    margin-left: -3rem;
    padding-left: 3rem;
}
.menu-button {
    background: none;
    cursor: pointer;
    font-size: var(--more-tech-list-font-size);
    border:none;
}
.menu-button:hover {
    color: var(--secondary-accent-color);
}
.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: var(--main-accent-color);
    overflow-x: hidden;
    padding-top: 60px;
    transition: 0.5s;
    text-align: center;
}
.sidenav:hover {
    cursor: pointer;
}
.sidenav a {
    padding: 8px;
    text-decoration: none;
    font-size: var(--hero-title-font-size);
    color: var(--text-color);
    display: block;
    transition: 0.3s;
}
.sidenav a:hover {
    color: #f1f1f1;
    cursor: pointer;
}
.sidenav .closebtn {
    position: absolute;
    right: 85%;
    font-size: 4rem;
    margin-left: 50px;
    top: -2%;
}


id {
    padding-top: 0.5rem;
}
.hero {
    font-size: var(--hero-title-font-size);
    margin-top: 4rem;
    padding-bottom: 3rem;
}
.svg-hero {
    display: none;
}
.profile-img {
    position: absolute;
    max-width: 100%;
    max-height: 100%;
    top: 43%;
    left: 25%;
    overflow: visible;
    opacity: 0.25;
    z-index: -2;
}
.profile-img img {
    position:relative;
    max-width: 200%;
    max-height: 100%;
    margin-top: -80%;
    margin-left: -42%;
    /* position: fixed;
    top: 9rem;
    left: 9rem;
    z-index: -2;
    opacity: 20%; */
}
.tech {
    display: flex;
    margin-bottom: 1.5rem;
    justify-content: space-evenly;
}
.main-tech {
    padding-bottom: 2rem;
    margin-right: 2rem;
    font-size: var(--main-tech-list-font-size);
}
.main-tech::before {
    content: 'TOOLS';
    position: relative;
    top: 7px;
    left: -20px;
    font-size: var(--pseudo-class-font-size);
    color: var(--secondary-accent-color);
}
.more-tech {
    font-size: var(--more-tech-list-font-size);
    padding-top: 3rem;
}
.more-tech::before {
    content: 'more tech';
    position: relative;
    top: -1px;
    transform-origin: 0 0;
    transform: rotate(-90deg);
    -webkit-transform: rotate(-90deg);
    -moz-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    font-size: var(--pseudo-class-font-size);
    color: var(--secondary-accent-color);
}
marquee {
    width: 100%;
    text-transform: uppercase;
    margin-bottom: 1.5rem;
}
marquee ul {
    display: flex;
    gap: 3rem;
}
marquee ul li::before {
    content: '.';
    position: relative;
    font-size: 2rem;
    color: var(--secondary-accent-color);
    left: -1.5rem;
    top: -0.25rem;
}
marquee ul li:last-child::after {
    content: '.';
    position: relative;
    font-size: 2rem;
    color: var(--secondary-accent-color);
    left: 1.5rem;
    top: -0.25rem;
}
.photo-left, .photo-right {
    /* margin-bottom: 3rem; */
}
article {
    line-height: 1.5em;
    margin-bottom: 1.5rem;
}
article img {
    max-width: 100%;
    margin-bottom: 1rem;
}

.project-title-links {
    margin-bottom: 2rem;
}
.project-title-links h3 {
    font-size: var(--default-body-font-size);
}
.project-title-links p {
    display: inline;
    font-size: var(--tech-used-in-projects-font-size);
}
.project-title-links p a {
    text-decoration: none;
    color:var(--text-color)
}
.project-title-links p a:visited {
    color:var(--text-color)
}
.project-title-links p a:hover {
    color:var(--main-accent-color);
    background-color: var(--secondary-accent-color);
}
.tech-used li {
    display: inline;
    font-size: var(--tech-used-in-projects-font-size);
}
.tech-used::before {
    content: 'tech';
    position: relative;
    top: -10px;
    color: var(--secondary-accent-color);
    font-size: var(--pseudo-class-font-size);
}
.tech-used:last-child{
    margin-bottom: 4rem;
}

/* Interests */
.more-about img {
    width: 100%;
    opacity: 75%;
    border-radius: 50%;
}
.interests-wrapper {
    margin-left: 1rem;
    margin-top: 2rem;
}
.more-about h4 {
    font-size: var(--more-tech-list-font-size);
}
.more-about h3 {
    display: inline;
}
.more-about p {
    font-size: var(--tech-used-in-projects-font-size);
    display: inline;
}
.more-about article {
    font-size: var(--tech-used-in-projects-font-size);
}

/* Color block shape */
.bottom-wrapper {
    background-color: var(--main-accent-color);
}
.bottom-wrapper:before{
    content: "";
    background-color: var(--main-accent-color);
    position: absolute;
    z-index: -2;
    left: -96vw;
    height: 80vw;
}

/* Contact form area */
.contact {
    height: 450px;
    margin-top: 8rem;
}
.contact-area {
    margin-left: 0;
    padding-left: 10%;
    padding-right: 10%;
}
.contact-area h2 {
    margin-bottom: 2rem;
    text-align: center;
}
form {
    position: relative;
    padding-bottom: 2rem;
}
#submit-form {
    background: none;
    border: none;
    border-radius: none;
    cursor: pointer;
    font-size: var(--default-body-font-size);
}
#submit-form:hover {
    color:var(--main-accent-color);
    background-color: var(--secondary-accent-color);
}
.form-group {
    display: grid;
    margin-bottom: 1rem;
}
.form-group label {
    /* text-align: right; */
}
.form-group input, .form-group textarea {
    border: 3px var(--menu-border-color) solid;
    border-radius: 2px;
    font-size: var(--more-tech-list-font-size);
}
.offsite-links {
    display: flex;
    justify-content: space-evenly;
}
.offsite-links img {
    width: 34px;
    height: 34px;
}
footer {
    margin-bottom: 0.5rem;
    text-align: center;
    font-size: var(--pseudo-class-font-size);
}








/* This applies from 600px onwards screen sizes */
@media (min-width: 600px){
    body {
        /* background: rgb(112, 112, 112); */
    }
    .sidenav .closebtn {
        position: absolute;
        right: 88%;
        font-size: 4rem;
        margin-left: 50px;
        top: -2%;
    }
    .svg-hero {
        display:inline;
        position: relative;
        z-index: -2;
        top: 0rem;
        left: -1rem;
        -webkit-animation: circle-spin 5000ms infinite linear;
    }
    @-webkit-keyframes circle-spin {
        from { transform: rotate(359deg); }
        to { transform: rotate(0deg); }
    }

    .tech {
        justify-content: center;
        margin-right: 10rem;
    }
    .projects-wrapper {
        display: grid;
        padding-left: 2rem;
        padding-right: 2rem;
    }
    .photo-left, .photo-right {
        margin-top: 3rem;
    }
    article img {
        max-width: 33%;
        float: inline-start;
        margin-right: 10px;
        margin-bottom: 10px;
    }
    .photo-right img {
        float: inline-end;
        margin-left: 10px;
    }
    .more-about {
        margin-bottom: 2rem;
    }
    .more-about img {
        max-width: 30%;
        opacity: 80%;
        margin-left: 2%;
        margin-right: 2%;
        float: left;
        border-radius: 50%;
    }
    .bottom-wrapper {
        background-color: var(--main-accent-color);
        margin-right: -50vw;
        margin-left: -50vw;
    }
    .bottom-wrapper:before{
        content: "";
        background-color: var(--main-accent-color);
        position: absolute;
        z-index: -2;
    }
    .contact-area {
        padding-left: 35%;
        padding-right: 35%;
    }

    .contact form {
        width: 100%;
    }
    footer {
        margin-top: 15%;
    }

}

/* This applies from 1000px onwards screen sizes */
@media (min-width: 1000px) {
    
    .menu-button, #topBtn {
        font-size: var(--default-body-font-size);
    }
    .sidenav .closebtn {
        position: absolute;
        right: 88%;
        font-size: 4rem;
        margin-left: 50px;
        top: -2%;
    }

    .projects-wrapper {
        display: grid;
        grid-template-columns: 33% 33%;
        justify-content: space-evenly;
    }
    article img {
        max-width: 100%;
    }
    .interests-wrapper {
        padding-right: 5rem;
    }
    .contact-area {
        padding-left: 38%;
        padding-right: 38%;
    }
    .offsite-links {
        margin-top: 2rem;
    }
}

@media (min-width: 1260px) {
    .sidenav .closebtn {
        position: absolute;
        right: 94.5%;
        font-size: 4rem;
        margin-left: 50px;
        top: -2%;
    }
    .more-about img {
        shape-outside: margin-box;
    }
    .contact-area {
        padding-left: 42%;
        padding-right: 42%;
    }
}

